processed/gerrit/txt/55416.txt
Change:     55416
Subject:    LU-17948 llite: replace i_mtime.tv_sec with inode_get_mtime_sec()
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55416
Change-Id:  Iaed264c32be3d48039c5350ebd306f4fc3ef5eb9
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-12 23:46:44.000000000
Updated:    2024-06-25 03:33:12.000000000
Patch Set:  2
Insertions: +1
Deletions:  -1
Comments:   2 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: Qian Yingjin: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Jian Yu, Qian Yingjin

--- Commit Message ---
LU-17948 llite: replace i_mtime.tv_sec with inode_get_mtime_sec()

This patch replaces i_mtime.tv_sec with inode_get_mtime_sec() to
fix the following build failure:

lustre/llite/pcc.c:1691:32: error:
'struct inode' has no member named 'i_mtime'; did you mean '__i_mtime'?
 1691 |         item.pm_mtime = inode->i_mtime.tv_sec;
      |                                ^~~~~~~
      |                                __i_mtime

Test-Parameters: trivial testlist=sanity-pcc

Change-Id: Iaed264c32be3d48039c5350ebd306f4fc3ef5eb9
Fixes: 3835f4d ("LU-13881 pcc: comparator support for PCC rules")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55416
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Qian Yingjin <qian@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-12 23:46:44.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-12 23:48:21.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Andreas Dilger, 2024-06-12 23:59:13.000000000) ---
Patch Set 1: Code-Review+1

(1 comment)

The spelling.txt rule is just a nice-to-have if the patch needs to be refreshed, otherwise it is fairly important that this patch land quickly.

--- Message (jenkins, 2024-06-13 00:20:55.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105441/ : SUCCESS

--- Message (Jian Yu, 2024-06-13 18:20:59.000000000) ---
Topic set to ubuntu2404

--- Message (Qian Yingjin, 2024-06-14 01:18:07.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2024-06-25 03:33:09.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-06-25 03:33:12.000000000) ---
Change has been successfully cherry-picked as 37486afa73573be6b4ce363038a9ce27d36101ee by Oleg Drokin
